--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-player": "^2.16.0",
     "react-rewards": "^2.0.4",
+    "react-router-dom": "^6.23.1",
     "react95": "^4.0.0",
     "styled-components": "^6.1.11",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "win95-media-player": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
