--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.42",
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-rewards": "^2.0.4",
     "react-router-dom": "^6.23.1",
     "react95": "^4.0.0",
