--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-draggable": "^4.4.6",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
+    "react-resizable": "^3.0.5",
     "react-rewards": "^2.0.4",
     "react-router-dom": "^6.23.1",
     "react95": "^4.0.0",
@@ -29,6 +30,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-redux": "^7.1.33",
+    "@types/react-resizable": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
