--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.42",
     "@reduxjs/toolkit": "^2.2.5",
+    "ofetch": "^1.3.4",
     "react": "^18.2.0",
     "react-click-away-listener": "^2.2.3",
     "react-dom": "^18.2.0",
